# shared_auth

./: .gitignore  README.md  pyproject.toml
AuthTools/: __init__.py
AuthTools/Permissions/: dependencies.py  serialize.py
AuthTools/models/: __init__.py  user.py
