[project]
name = "authtools"
version = "0.1.0"
description = "Shared auth library for FastAPI"
authors = [
    { name = "peyro", email = "peyrovskaaa@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "fastapi (>=0.101.0,<0.119.0)",
    "fastapi-problem (>=0.11.5,<0.12.0)"
]

[tool.poetry]
packages = [
  { include = "AuthTools" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
